syntax = "proto3";

package user;

option go_package = "internal/pb";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (UserResponse);
    rpc GetUser (GetUserRequest) returns (UserResponse);
    rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message CreateUserRequest {
    string username = 1;
    string email = 2;
    string phone = 3;
}

message GetUserRequest {
    uint32 id = 1;
}

message GetAllUsersRequest {}

message UpdateUserRequest {
    uint32 id = 1;
    string username = 2;
    string email = 3;
    string phone = 4;
}

message DeleteUserRequest {
    uint32 id = 1;
}

message UserResponse {
    uint32 id = 1;
    string username = 2;
    string email = 3;
    string phone = 4;
}

message GetAllUsersResponse {
    repeated UserResponse users = 1;
}

message DeleteUserResponse {
    bool success = 1;
}
